=== master

* Have defaults_setter plugin pass model instance to default_values callable if it has arity 1 (pedrocarmona) (#2195)

* Support string_agg extension on SQLite 3.44+ (segiddins) (#2191)

* Support schema-qualified table names when using create_table :temp with a Sequel::SQL::QualifiedIdentifier (jeremyevans) (#2185)

* Support MERGE WHEN NOT MATCHED BY SOURCE on PostgreSQL 17+ (jeremyevans)

* Add stdio_logger extension for a minimal logger that Sequel::Database can use (jeremyevans)

* Simplify Database#inspect output to database_type, host, database, and user (jeremyevans)

=== 5.82.0 (2024-07-01)

* Limit tactically eager loading to objects that have the same association reflection (jeremyevans) (#2181)

* Fix race condition in threaded/sharded_threaded connection pools that could cause stalls (jeremyevans)

* Emulate dropping a unique column or a column that is part of an index on SQLite 3.35.0+ (jeremyevans) (#2176)

* Support MERGE RETURNING on PostgreSQL 17+ (jeremyevans)

* Remove use of logger library in bin/sequel (jeremyevans)

* Support :connect_opts_proc Database option for late binding options (jeremyevans) (#2164)

=== 5.81.0 (2024-06-01)

* Fix ignored block warnings in a couple plugin apply methods on Ruby 3.4 (jeremyevans)

* Skip Ruby internal caller locations when searching for caller locations in caller_logging and provenance extensions (jeremyevans) 

* Add temporarily_release_connection Database extension for multithreaded transactional testing (jeremyevans)

=== 5.80.0 (2024-05-01)

* Support Dataset#skip_locked on MariaDB 10.6+ (simi) (#2150)

* Avoid allocating datasets in cases where the returned dataset would be the same as the receiver (jeremyevans)

* Add provenance dataset extension, which includes comments in queries showing how and where the dataset was built (jeremyevans)

=== 5.79.0 (2024-04-01)

* Support create_or_replace_view with :materialized option on PostgreSQL (nashby) (#2144)
